Migrate to Material-UI v4 - changed accent color, again - remove Home.css, implemented jss keyframes - add Container to Home + adjust spacing - add HideOnScroll to NavBar + remove old implementation - fix link colors - Add Container to CodeSwitching + spacing adjustments - various CSS adjustments

--- a/react-app/src/components/App.css
+++ b/react-app/src/components/App.css
@@ -1,8 +1,8 @@
 a:link {
-  color: #ba68c8;
+  color: #ff4081;
   text-decoration: none;
 }
 
 a:visited {
-    color: #ba68c8;
+    color: #ff4081;
 }
